# embedded_systems_blink

./: README.md  sdkconfig  sdkconfig.old
.cache/clangd/index/: main.c.21DCB9166EDA0D13.idx
main/: CMakeLists.txt  ble.c  bt_spp.c  button.c  hx711.c  led.c  main.c
main/include/: ble.h  bt_spp.h  button.h  hx711.h  led.h
